Fix dialog overflow issue

--- a/resources/wizard/style.css
+++ b/resources/wizard/style.css
@@ -39,6 +39,7 @@
     display: inherit;
     margin: 30px auto;
     height: calc(100% - 140px);
+    overflow: auto;
 }
 
 .wizard-item {
